--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "witty-name",
   "scripts": {
+    "install": "yarn install --check-cache",
     "build:server": "tsc -p ./server/tsconfig.json",
-    "build:client": "",
+    "build:client1": "tsc -p ./client/tsconfig.json",
+    "build:client2": "yarn esbuild ./client/build/app.js --bundle '--define:process.env.NODE_ENV=\"development\"' --outdir=./server/static",
     "start:server": "yarn build:server && node -r dotenv/config server/build/start.js dotenv_config_path=./server/.env.test",
     "start:server:dev": "yarn build:server && nodemon -r dotenv/config server/build/start.js dotenv_config_path=./server/.env.test",
     "start": "yarn start:server",
@@ -10,8 +12,11 @@
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
+    "@types/react": "^16.9.48",
+    "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
+    "esbuild": "^0.6.28",
     "eslint": "^7.7.0",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
